html and everything

--- a/iis/webapps/iis/login.html
+++ b/iis/webapps/iis/login.html
@@ -42,7 +42,7 @@
 			IE7 compatibility: if you want to remove the <h1>, 
 			add style="zoom:1" to the above .block-content div
 			-->
-			<h1>Admin</h1>
+			<h1>Innovative Infusion Solutions</h1>
 			<div class="block-header">Please login</div>
 				
 			<p class="message error no-margin">Error message</p>
@@ -156,7 +156,7 @@
 						{
 							if (data.valid)
 							{
-								// Small timer to allow the 'cheking login' message to show when server is too fast
+								// Small timer to allow the 'checking login' message to show when server is too fast
 								var receiveTimer = new Date().getTime();
 								if (receiveTimer-sendTimer < 500)
 								{
@@ -189,7 +189,7 @@
 					});
 					
 					// Message
-					$('#login-block').removeBlockMessages().blockMessage('Please wait, cheking login...', {type: 'loading'});
+					$('#login-block').removeBlockMessages().blockMessage('Please wait, checking login...', {type: 'loading'});
 				}
 			});
 		});
