--- a/iis/webapps/iis/html/nurse/licenses.html
+++ b/iis/webapps/iis/html/nurse/licenses.html
@@ -4,6 +4,6 @@
 		<th>{{license.licType}}</th>
 		<td><input type="TEXT" ng-model="license.number" on-change="update(license)"/></td>
 		<td><input type="TEXT" class="datepicker" ng-model="license.validDate" on-change="update(license)"/></td>
-		<td><input type="TEXT" class="datepicker" ng-model="license.expirationDate" on-change="update(license)"/></td>
+		<td ng-show="license.showExp"><input type="TEXT" class="datepicker" ng-model="license.expirationDate" on-change="update(license)"/></td>
 	</tr>
 </table>
