--- a/budget/webapps/budget/html/listview.html
+++ b/budget/webapps/budget/html/listview.html
@@ -16,10 +16,14 @@
 					<input class="datepicker" type="text" data-ng-model="bill.dueDate">
 					<img src="images/icons/fugue/calendar-month.png" width="16" height="16">
 				</td>
-				<td>{{bill.name}}</td>
-				<td><input type="text" data-ng-model="bill.amountDue"></td>
+				<td>
+					<select data-ng-model="bill.accountId" data-ng-change="updateTransaction(trans, 'creditAccountId')"
+						data-ng-options="account.id as account.name for account in accounts">
+					</select>
+				</td>
+				<td><input type="text" data-ng-model="bill.amountDue">{{bill.acctBalPost}}</td>
 				<td data-ng-repeat="account in bill.accounts">
-					<input type="text" data-ng-model="account.effect" />{{account.balance}}
+					<input type="text" data-ng-model="account.amount" />{{account.postBal}}
 				</td>
 			</tr>
 		</tbody>
