--- a/budget/webapps/budget/html/listview.html
+++ b/budget/webapps/budget/html/listview.html
@@ -13,16 +13,37 @@
 					<input type="checkbox" data-ng-model="bill.selected">
 				</td>
 				<td>
-					<input class="datepicker" type="text" data-ng-model="bill.dueDate">
+					<input class="datepicker" type="text" data-ng-model="bill.dueDate" data-on-change="updateBill(bill, 'dueDate')">
 					<img src="images/icons/fugue/calendar-month.png" width="16" height="16">
 				</td>
 				<td>
-					<select data-ng-model="bill.accountId" data-ng-change="updateTransaction(trans, 'creditAccountId')"
+					<select data-ng-model="bill.accountId" data-ng-change="updateBill(bill, 'accountId')"
 						data-ng-options="account.id as account.name for account in accounts">
 					</select>
 				</td>
-				<td><input type="text" data-ng-model="bill.amountDue">{{bill.acctBalPost}}</td>
+				<td><input type="text" data-ng-model="bill.amountDue" data-on-change="updateBill(bill, 'amountDue')">{{bill.acctBalPost}}</td>
 				<td data-ng-repeat="account in bill.accounts">
+					<input type="text" data-ng-model="account.amount" data-on-change="updateBillTrans(account, 'amount')" />{{account.postBal}}
+				</td>
+			</tr>
+			<tr>
+				<td class="th">
+					<button data-ng-click="addBill()">+</button>
+					<div class="error-block" data-ng-show="billAddError">
+						<p class="message error no-margin">{{billAddError}}</p>
+					</div>
+				</td>
+				<td>
+					<input class="datepicker" type="text" data-ng-model="newBill.dueDate">
+					<img src="images/icons/fugue/calendar-month.png" width="16" height="16">
+				</td>
+				<td>
+					<select data-ng-model="newBill.accountId"
+						data-ng-options="account.id as account.name for account in accounts">
+					</select>
+				</td>
+				<td><input type="text" data-ng-model="newBill.amountDue">{{newBill.acctBalPost}}</td>
+				<td data-ng-repeat="account in newBill.accounts">
 					<input type="text" data-ng-model="account.amount" />{{account.postBal}}
 				</td>
 			</tr>
