--- a/budget/webapps/budget/index.html
+++ b/budget/webapps/budget/index.html
@@ -52,6 +52,7 @@
 	<script src="js/angular/defaultviewctrl.js"></script>
 	<script src="js/angular/listctrl.js"></script>
 	<script src="js/angular/accountingctrl.js"></script>
+	<script src="js/angular/calctrl.js"></script>
 	<script src="js/angular/module.js"></script>
 	<script src="js/update.js"></script>
 	<script src="js/mapauto.js"></script>
@@ -124,6 +125,7 @@
 	<a href="#accounts">Accounts</a>
 	<a href="#list">List View</a>
 	<a href="#accounting">Accounting View</a>
+	<a href="#cal">Calendar</a>
 	<article class="container_12" data-ng-app="budget">
 		<div data-ng-view></div>
 	</article>
