Restructure of Angular, New Features
Restructure of Angular code into folders
Shared memory JS object
Start of summary view

--- a/budget/webapps/budget/html/accounts.html
+++ b/budget/webapps/budget/html/accounts.html
@@ -29,9 +29,9 @@
 					</select>
 				</td>
 				<td class="th">
-					<button data-ng-click="addTransaction()">+</button>
-					<div class="error-block" data-ng-show="transAddError">
-						<p class="message error no-margin">{{transAddError}}</p>
+					<button data-ng-click="addAccount()">+</button>
+					<div class="error-block" data-ng-show="addError">
+						<p class="message error no-margin">{{addError}}</p>
 					</div>
 				</td>
 			</tr>
