Summary View Work

--- a/budget/webapps/budget/html/portfolios.html
+++ b/budget/webapps/budget/html/portfolios.html
@@ -9,8 +9,9 @@
 				<td class="th table-check-cell">
 					<input type="checkbox" data-ng-model="portfolio.selected">
 				</td>
-				<td><input type="text" data-ng-model="portfolio.name" data-on-change="updateAccount(portfolio, 'name')"></td>
+				<td><input type="text" data-ng-model="portfolio.name" data-on-change="updatePortfolio(portfolio, 'name')"></td>
 				<td>{{portfolio.role}}</td>
+				// 800-684-8123
 			</tr>
 			<tr>
 				<td class="th">
