--- a/budget/webapps/budget/html/sumview.html
+++ b/budget/webapps/budget/html/sumview.html
@@ -1,1 +1,18 @@
-<h2>Summary</h2>
+<div>
+	<table class="table sortable no-margin" cellspacing="0" width="100%">
+		<thead><tr>
+				<th class="black-cell"><span class="loading"></span></th>
+				<th>Account</th><th>JAN</th><th>FEB</th><th>MAR</th><th>APR</th><th>MAY</th><th>JUN</th>
+				<th>JUL</th><th>AUG</th><th>SEP</th><th>OCT</th><th>NOV</th><th>DEC</th>
+		</tr></thead>
+		<tbody>
+			<tr data-ng-repeat="account in accountSummaryList | orderBy:'sortValue'">
+				<td class="th table-check-cell">
+					<input type="checkbox" data-ng-model="account.selected">
+				</td>
+				<td>{{account.name}}</td>
+				<td data-ng-repeat="monthTotal in account.monthTotals">{{monthTotal | currency}}</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
