--- a/budget/webapps/budget/index.html
+++ b/budget/webapps/budget/index.html
@@ -95,7 +95,7 @@
 	<div id="status-bar"><div class="container_12">
 	
 		<ul id="status-infos">
-			<li class="spaced">Logged as: <strong><%=user.getEmail()%></strong></li>
+			<li class="spaced">Logged as: <strong>{{sharedData.user.email}}</strong></li>
 			<li><a href="logout" class="button red" title="Logout"><span class="smaller">LOGOUT</span></a></li>
 		</ul>
 		
