A lot of changes

--- a/budget/webapps/budget/html/defview.html
+++ b/budget/webapps/budget/html/defview.html
@@ -1,1 +1,4 @@
-<div data-enter> You moused over this {{count}} times</div>
+<div>
+	<div data-enter> You moused over this {{count}} times</div>
+	<input data-ui-date data-name="DateOfBirth"></input>
+</div>
