Lots of budget changes

--- a/budget/webapps/budget/index.html
+++ b/budget/webapps/budget/index.html
@@ -119,6 +119,7 @@
 		<a href="#accounting"><button>Accounting View</button></a>
 		<a href="#cal"><button>Calendar</button></a>
 		<a href="#summary"><button>Summary</button></a>
+		<a href="#templates"><button>Templates</button></a>
 		<div class="block-controls">
 			<ul class="controls-buttons">
 				<li>
