--- a/budget/webapps/budget/index.html
+++ b/budget/webapps/budget/index.html
@@ -61,6 +61,7 @@
 	<script src="js/angular/controller/accountingctrl.js"></script>
 	<script src="js/angular/controller/calctrl.js"></script>
 	<script src="js/angular/controller/summaryctrl.js"></script>
+	<script src="js/angular/controller/templatesctrl.js"></script>
 	<script src="js/angular/module.js"></script>
 	<script src="js/update.js"></script>
 	<script src="js/mapauto.js"></script>
