--- a/budget/webapps/budget/html/accounts.html
+++ b/budget/webapps/budget/html/accounts.html
@@ -2,7 +2,7 @@
 	<table class="table sortable no-margin" cellspacing="0" width="100%">
 		<thead><tr>
 				<th class="black-cell"><span class="loading"></span></th>
-				<th>Name</th><th>Category</th><th>Action</th>
+				<th>Name</th><th>Parent Account</th><th>Payment Account</th><th>Action</th>
 		</tr></thead>
 		<tbody>
 			<tr data-ng-repeat="account in accounts | orderBy:'sortValue'">
@@ -11,9 +11,13 @@
 				</td>
 				<td><input type="text" data-ng-model="account.name" data-on-change="updateAccount(account, 'name')"></td>
 				<td>
-					<select data-ng-model="account.categoryId" data-ng-change="updateAccount(account, 'categoryId')"
-						data-ng-options="category.id as category.name for category in categories">
+					<select data-ng-model="account.parentAccountId" data-ng-change="updateAccount(account, 'parentAccountId')"
+						data-ng-options="parent.id as parent.name for parent in accounts">
 					</select>
+				</td>
+				<td class="th table-check-cell">
+					<input type="checkbox" data-ng-model="account.paymentAccount"
+						data-ng-change="updateAccount(account, 'paymentAccount')">
 				</td>
 			</tr>
 			<tr>
@@ -25,8 +29,11 @@
 				</td>
 				<td><input type="text" data-ng-model="newAccount.name"></td>
 				<td>
-					<select data-ng-model="newAccount.category_id" data-ng-options="category.id as category.name for category in categories">
+					<select data-ng-model="newAccount.parentAccountId" data-ng-options="parent.id as parent.name for parent in accounts">
 					</select>
+				</td>
+				<td class="th table-check-cell">
+					<input type="checkbox" data-ng-model="newAccount.paymentAccount">
 				</td>
 				<td class="th">
 					<button data-ng-click="addAccount()">+</button>
