--- a/budget/webapps/budget/html/templates.html
+++ b/budget/webapps/budget/html/templates.html
@@ -1,55 +1,60 @@
 <div>
 	Template
-	<select data-ng-model="templateCtrl.selectedTemplate"
-		data-ng-options="template.id as template.name for template in templateCtrl.templates">
+	<select data-ng-model="templatesCtrl.selectedTemplate" data-ng-change="templatesCtrl.refreshBills()"
+		data-ng-options="template as template.name for template in templatesCtrl.templates">
 	</select>
+	<a data-ng-click="templatesCtrl.showTemplateAdd=true"><button>New Template</button></a>
+	<div data-ng-show="templatesCtrl.showTemplateAdd">
+		<input type="text" data-ng-model="templatesCtrl.newTemplate.name">
+		<a data-ng-click="templatesCtrl.addTemplate()"><button>Add</button></a>
+		<a data-ng-click="templatesCtrl.showTemplateAdd=false"><button>Cancel</button></a>
+	</div>
 	<table class="table sortable no-margin" cellspacing="0" width="100%">
 		<thead><tr>
 				<th class="black-cell"><span class="loading"></span></th>
-				<th>Date</th><th>Bill</th><th>Name</th><th>Amount Due</th>
-				<th data-ng-repeat="bankAccount in templateCtrl.bankAccounts">
+				<th>Due Day</th><th>Bill</th><th>Name</th><th>Amount Due</th>
+				<th data-ng-repeat="bankAccount in templatesCtrl.bankAccounts">
 					{{bankAccount.name}}
 				</th>
 		</tr></thead>
 		<tbody>
-			<tr data-ng-repeat="bill in templateCtrl.bills">
+			<tr data-ng-repeat="bill in templatesCtrl.bills">
 				<td class="th table-check-cell">
 					<input type="checkbox" data-ng-model="bill.selected">
+					<a data-ng-show="bill.selected" data-ng-click="templatesCtrl.deleteSelected()"><button>Delete</button></a>
 				</td>
 				<td>
-					<input class="datepicker" type="text" data-ng-model="bill.dueDate" size="10" data-on-change="updateBill(bill, 'dueDate')">
-					<img src="images/icons/fugue/calendar-month.png" width="16" height="16">
+					<input type="text" data-ng-model="bill.dueDay" size="3" data-on-change="templatesCtrl.updateBill(bill, 'dueDay')">
 				</td>
 				<td>
-					<select data-ng-model="bill.accountId" data-ng-change="templateCtrl.updateBill(bill, 'accountId')"
-						data-ng-options="account.id as account.name for account in templateCtrl.accounts">
+					<select data-ng-model="bill.accountId" data-ng-change="templatesCtrl.updateBill(bill, 'accountId')"
+						data-ng-options="account.id as account.name for account in templatesCtrl.accounts">
 					</select>
 				</td>
-				<td><input type="text" data-ng-model="bill.name" data-on-change="templateCtrl.updateBill(bill, 'name')"></td>
-				<td><input type="text" data-ng-model="bill.amountDue" size="8" data-on-change="templateCtrl.updateBill(bill, 'amountDue')"> {{bill.acctBalPost}}</td>
+				<td><input type="text" data-ng-model="bill.name" data-on-change="templatesCtrl.updateBill(bill, 'name')"></td>
+				<td><input type="text" data-ng-model="bill.amountDue" size="8" data-on-change="templatesCtrl.updateBill(bill, 'amountDue')"> {{bill.acctBalPost}}</td>
 				<td data-ng-repeat="account in bill.accounts">
-					<input type="text" data-ng-model="account.amount" size="8" data-on-change="templateCtrl.updateBillTrans(account, 'amount')"> {{account.postBal}}
+					<input type="text" data-ng-model="account.amount" size="8" data-on-change="templatesCtrl.updateBillTrans(account, 'amount')"> {{account.postBal}}
 				</td>
 			</tr>
 			<tr>
 				<td class="th">
-					<button data-ng-click="templateCtrl.addBill()">+</button>
-					<div class="error-block" data-ng-show="templateCtrl.billAddError">
-						<p class="message error no-margin">{{templateCtrl.billAddError}}</p>
+					<button data-ng-click="templatesCtrl.addBill()">+</button>
+					<div class="error-block" data-ng-show="templatesCtrl.billAddError">
+						<p class="message error no-margin">{{templatesCtrl.billAddError}}</p>
 					</div>
 				</td>
 				<td>
-					<input class="datepicker" type="text" data-ng-model="templateCtrl.newBill.dueDate" size="10">
-					<img src="images/icons/fugue/calendar-month.png" width="16" height="16">
+					<input type="text" data-ng-model="templatesCtrl.newTemplateBill.dueDay" size="2">
 				</td>
 				<td>
-					<select data-ng-model="templateCtrl.newBill.accountId"
-						data-ng-options="account.id as account.name for account in templateCtrl.accounts">
+					<select data-ng-model="templatesCtrl.newTemplateBill.accountId"
+						data-ng-options="account.id as account.name for account in templatesCtrl.accounts">
 					</select>
 				</td>
-				<td><input type="text" data-ng-model="templateCtrl.newBill.name"></td>
-				<td><input type="text" data-ng-model="templateCtrl.newBill.amountDue" size="8"> {{newBill.acctBalPost}}</td>
-				<td data-ng-repeat="account in templateCtrl.newBill.accounts">
+				<td><input type="text" data-ng-model="templatesCtrl.newTemplateBill.name"></td>
+				<td><input type="text" data-ng-model="templatesCtrl.newTemplateBill.amountDue" size="8"> {{newTemplateBill.acctBalPost}}</td>
+				<td data-ng-repeat="account in templatesCtrl.newTemplateBill.accounts">
 					<input type="text" data-ng-model="account.amount" size="8"> {{account.postBal}}
 				</td>
 			</tr>
