--- a/budget/webapps/budget/html/listview.html
+++ b/budget/webapps/budget/html/listview.html
@@ -17,7 +17,7 @@
 					<input type="checkbox" data-ng-model="bill.selected">
 				</td>
 				<td>
-					<input class="datepicker" type="text" data-ng-model="bill.dueDate" size="10" data-on-change="updateBill(bill, 'dueDate')">
+					<input class="datepicker" type="text" data-ng-model="bill.dueDate" size="10" data-ng-change="updateBill(bill, 'dueDate')">
 					<img src="images/icons/fugue/calendar-month.png" width="16" height="16">
 				</td>
 				<td>
