Moved common elements out to common. Made progress on dashboard.

--- a/webapps/iis/js/html/dashboard.html
+++ b/webapps/iis/js/html/dashboard.html
@@ -1,3 +1,26 @@
-<div>
-	<div data-dd4-table="TableType.USERS"></div>
-</div>
+<article class="container_12">
+  <div class="columns">
+    <div class="colx2-left">
+      <div data-dd4-table="TableType.PENDING_INTAKE"></div>
+    </div>
+    <div class="colx2-right">
+      <div data-dd4-table="TableType.PENDING_ASSESSMENT"></div>
+    </div>
+  </div>
+  <!-- TODO(eddiemay) <div data-dd4-table="TableType.REVIEWABLE"></div> -->
+  <!-- TODO(eddiemay) <div data-dd4-table="TableType.LICENSE_ALERT"></div> -->
+  <div class="columns">
+    <div data-dd4-table="TableType.UNCONFIRMED"></div>
+  </div>
+  <div class="columns">
+    <!-- TODO(eddiemay) Calendar -->
+  </div>
+  <div class="columns">
+    <div class="colx2-left">
+      <div data-dd4-table="TableType.PAYABLE"></div>
+    </div>
+    <div class="colx2-right">
+      <div data-dd4-table="TableType.BILLABLE"></div>
+    </div>
+  </div>
+</article>
