--- a/webapps/iis/onepage.html
+++ b/webapps/iis/onepage.html
@@ -64,21 +64,23 @@
 	
 	<!-- Digital D4 -->
 	<script src="js/bootstrap.js"></script>
-	<script src="js/route.js"></script>
-	<!--script src="js/gen/userroleui.js"></script-->
 	<script src="js/common/jsonconnector.js"></script>
 	<script src="js/common/daterange.js"></script>
   <script src="js/common/protoservice.js"></script>
   <script src="js/common/generaldataservice.js"></script>
+  <script src="js/common/module.js"></script>
+  <script src="js/common/dd4table.js"></script>
   <script src="js/gen/generaldata.js"></script>
   <script src="js/gen/appointmentstateui.js"></script>
 	<script src="js/factory/shareddata.js"></script>
-	<script src="js/controller/tablectrl.js"></script>
   <script src="js/controller/calctrl.js"></script>
   <script src="js/controller/iisctrl.js"></script>
   <script src="js/controller/intakectrl.js"></script>
 	<script src="js/controller/vendorctrl.js"></script>
-	<script src="js/module.js"></script>
+  <script src="js/route.js"></script>
+  <script src="js/module.js"></script>
+
+  <!-- Deprecated -->
 	<script src="js/update.js"></script>
 	<script src="js/mapauto.js"></script>
 </head>
