Work on tables, Patient page and vendor page.

--- a/webapps/iis/js/html/dashboard.html
+++ b/webapps/iis/js/html/dashboard.html
@@ -7,8 +7,14 @@
       <div data-dd4-table="TableType.PENDING_ASSESSMENT"></div>
     </div>
   </div>
-  <!-- TODO(eddiemay) <div data-dd4-table="TableType.REVIEWABLE"></div> -->
-  <!-- TODO(eddiemay) <div data-dd4-table="TableType.LICENSE_ALERT"></div> -->
+  <div class="columns">
+    <div class="colx2-left">
+      <div data-dd4-table="TableType.REVIEWABLE"></div>
+    </div>
+    <div class="colx2-right">
+      <div data-dd4-table="TableType.LICENSE_ALERT"></div>
+    </div>
+  </div>
   <div class="columns">
     <div data-dd4-table="TableType.UNCONFIRMED"></div>
   </div>
