--- a/webapps/iis/js/html/intake.html
+++ b/webapps/iis/js/html/intake.html
@@ -9,7 +9,7 @@
           <div class="columns">
             <div class="colx2-left">
               <label for="referralDate" class="">Referral Date</label>
-              <input type="text" data-ng-model="intakeCtrl.patient.referral_date" id="referralDate" value="08/21/2016" class="datepicker hasDatepick">
+              <input type="text" data-ng-model="intakeCtrl.patient.referral_date" id="referralDate" class="datepicker hasDatepick">
               <img src="images/icons/fugue/calendar-month.png" width="16" height="16">
             </div>
             <p class="colx2-right">
