Modified Function object to match new java 1.8 function object. Changed DualProtoService to use new stream API for list conversion to fix problem where service was returning part of the list.

--- a/webapps/iis/js/html/vendor.html
+++ b/webapps/iis/js/html/vendor.html
@@ -51,7 +51,7 @@
 						<textarea data-ng-model="vendorCtrl.vendor.notes" id="notes" data-on-change="vendorCtrl.update('notes')"></textarea>
 					</div>
 				</div>
-				<div data-ng-if="vendorCtrl.selectedTab == vendorCtrl.TABS.map">
+				<div data-ng-if="vendorCtrl.selectedTab == vendorCtrl.TABS.patients">
 					<div data-dd4-table="vendorCtrl.TableType.PATIENTS"></div>
 				</div>
 				<div data-ng-if="vendorCtrl.selectedTab == vendorCtrl.TABS.pending">
