More IIS 2.0 changes

--- a/webapps/iis/js/html/dashboard.html
+++ b/webapps/iis/js/html/dashboard.html
@@ -19,7 +19,7 @@
     <div data-dd4-table="TableType.UNCONFIRMED"></div>
   </div>
   <div class="columns">
-    <!-- TODO(eddiemay) Calendar -->
+    <div data-iis-calendar></div>
   </div>
   <div class="columns">
     <div class="colx2-left">
