--- a/webapps/iis/js/html/intake.html
+++ b/webapps/iis/js/html/intake.html
@@ -8,9 +8,8 @@
           <legend>Referral</legend>
           <div class="columns">
             <div class="colx2-left">
-              <label for="referralDate" class="">Referral Date</label>
-              <input type="text" data-ng-model="intakeCtrl.patient.referral_date" id="referralDate" class="datepicker hasDatepick">
-              <img src="images/icons/fugue/calendar-month.png" width="16" height="16">
+              <label>Referral Date</label>
+              <div data-dd4-datepicker data-ng-model="intakeCtrl.patient.referral_date"></div>
             </div>
             <p class="colx2-right">
               <label for="referralSourceId" class="required">Referral Source</label>
@@ -25,12 +24,11 @@
               <input type="text" data-ng-model="intakeCtrl.patient.name" id="name" class="full-width">
             </div>
             <p class="colx3-center">
-              <label for="dOB" class="">Date of Birth</label>
-              <input type="text" data-ng-model="intakeCtrl.patient.d_o_b" id="dOB" class="datepicker hasDatepick">
-              <img src="images/icons/fugue/calendar-month.png" width="16" height="16">
+              <label>Date of Birth</label>
+              <div data-dd4-datepicker data-ng-model="intakeCtrl.patient.d_o_b"></div>
             </p>
             <div class="colx3-right">
-              <label for="dianosisId" class="">Diagnosis</label>
+              <label for="dianosisId">Diagnosis</label>
               <select data-ng-model="intakeCtrl.patient.dianosis_id" id="dianosisId" class="full-width"
                       data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.DIANOSIS) | orderBy:'name'">
               </select>
@@ -38,17 +36,17 @@
           </div>
           <div class="columns">
             <p class="colx3-left">
-              <label for="therapyTypeId" class="">Therapy Type</label>
+              <label for="therapyTypeId">Therapy Type</label>
               <select data-ng-model="intakeCtrl.patient.therapy_type_id" id="therapyTypeId" class="full-width"
                       data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.THERAPY_TYPE) | orderBy:'name'">
               </select>
             </p>
             <div class="colx3-center">
-              <label for="rx" class="">Pt Rx</label>
+              <label for="rx">Pt Rx</label>
               <input type="text" data-ng-model="intakeCtrl.patient.rx" id="rx" class="full-width">
             </div>
             <p class="colx3-right">
-              <label for="iVAccessId" class="">IV Access</label>
+              <label for="iVAccessId">IV Access</label>
               <select data-ng-model="intakeCtrl.patient.i_v_access_id" id="iVAccessId" class="full-width"
                       data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.IV_ACCESS) | orderBy:'name'">
               </select>
@@ -64,14 +62,12 @@
               </p>
             </div>
             <p class="colx3-center">
-              <label for="startOfCareDate" class="">Start Date</label>
-              <input type="text" data-ng-model="intakeCtrl.patient.start_of_care_date" id="startOfCareDate" class="datepicker hasDatepick">
-              <img src="images/icons/fugue/calendar-month.png" width="16" height="16">
+              <label>Start Date</label>
+              <div data-dd4-datepicker data-ng-model="intakeCtrl.patient.start_of_care_date"></div>
             </p>
             <p class="colx3-right">
-              <label for="estLastDayOfService" class="">Est. Last Day of Service</label>
-              <input type="text" data-ng-model="intakeCtrl.patient.est_last_day_of_service" id="estLastDayOfService" class="datepicker hasDatepick">
-              <img src="images/icons/fugue/calendar-month.png" width="16" height="16">
+              <label>Est. Last Day of Service</label>
+              <div data-dd4-datepicker data-ng-model="intakeCtrl.patient.est_last_day_of_service"></div>
             </p>
           </div>
           <div class="columns">
@@ -82,13 +78,13 @@
               </select>
             </p>
             <p class="colx3-center">
-              <label for="phoneNumber" class="">Primary Phone Number</label><input type="text" data-ng-model="intakeCtrl.patient.phone_number" id="phoneNumber" size="14">
+              <label for="phoneNumber">Primary Phone Number</label><input type="text" data-ng-model="intakeCtrl.patient.phone_number" id="phoneNumber" size="14">
               <select data-ng-model="intakeCtrl.patient.primary_phone_type_id" id="primaryPhoneTypeId"
                       data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.PHONE_TYPE) | orderBy:'rank'">
               </select>
             </p>
             <p class="colx3-right">
-              <label for="altContactNumber" class="">Alt Contact Number</label>
+              <label for="altContactNumber">Alt Contact Number</label>
               <input type="text" data-ng-model="intakeCtrl.patient.alt_contact_number" id="altContactNumber" size="14">
               <select data-ng-model="intakeCtrl.patient.alt_phone_type_id" id="altPhoneTypeId"
                       data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.PHONE_TYPE) | orderBy:'rank'">
@@ -97,21 +93,21 @@
           </div>
           <div class="columns">
             <p class="colx2-left">
-              <label for="serviceAddress" class="">Service Address</label>
-              <input type="text" data-ng-model="intakeCtrl.patient.service_address" id="serviceAddress" class="full-width">
+              <label>Service Address</label>
+              <div data-dd4-address data-ng-model="intakeCtrl.patient.service_address" class="full-width"></div>
             </p>
             <div class="colx2-right">
-              <label for="serviceAddrUnit" class="">Unit #</label>
+              <label for="serviceAddrUnit">Unit #</label>
               <input type="text" data-ng-model="intakeCtrl.patient.service_addr_unit" id="serviceAddrUnit" size="4">
             </div>
           </div>
           <div class="columns">
             <p class="colx3-left">
-              <label for="emergencyContact" class="">Emergency Contact</label>
+              <label for="emergencyContact">Emergency Contact</label>
               <input type="text" data-ng-model="intakeCtrl.patient.emergency_contact" id="emergencyContact" class="full-width">
             </p>
             <p class="colx3-center">
-              <label for="emergencyContactPhone" class="">Emergency Contact Number</label>
+              <label for="emergencyContactPhone">Emergency Contact Number</label>
               <input type="text" data-ng-model="intakeCtrl.patient.emergency_contact_phone" id="emergencyContactPhone" size="14">
               <select data-ng-model="intakeCtrl.patient.emergency_contact_phone_type_id" id="emergencyContactPhoneTypeId"
                       data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.PHONE_TYPE) | orderBy:'rank'">
@@ -124,27 +120,25 @@
                 <input type="text" data-ng-model="intakeCtrl.patient.labs_frequency" id="labsFrequency"></p>
             </div>
             <p class="colx3-center">
-              <label for="firstRecertDue" class="">1st Re-certification</label>
-              <input type="text" data-ng-model="intakeCtrl.patient.first_recert_due" id="firstRecertDue" class="datepicker hasDatepick">
-              <img src="images/icons/fugue/calendar-month.png" width="16" height="16">
+              <label>1st Re-certification</label>
+              <div data-dd4-datepicker data-ng-model="intakeCtrl.patient.first_recert_due"></div>
             </p>
             <p class="colx3-right">
-              <label for="dCDate" class="">DC Date</label>
-              <input type="text" data-ng-model="intakeCtrl.patient.d_c_date" id="dCDate" class="datepicker hasDatepick">
-              <img src="images/icons/fugue/calendar-month.png" width="16" height="16">
+              <label>DC Date</label>
+              <div data-dd4-datepicker data-ng-model="intakeCtrl.patient.d_c_date"></div>
             </p>
           </div>
           <div class="columns">
             <div class="colx3-left">
-              <label for="infoInSOS" class="">PT Info in SOS?</label>
+              <label for="infoInSOS">PT Info in SOS?</label>
               <input type="checkbox" class="full-width" data-ng-model="intakeCtrl.patient.info_in_s_o_s" id="infoInSOS">
             </div>
             <p class="colx3-right-double">
-              <label for="schedulingPreference" class="">Scheduling Preference</label>
+              <label for="schedulingPreference">Scheduling Preference</label>
               <input type="text" data-ng-model="intakeCtrl.patient.scheduling_preference" id="schedulingPreference" class="full-width">
             </p>
           </div>
-          <label for="referralNote" class="">Notes</label>
+          <label for="referralNote">Notes</label>
           <textarea data-ng-model="intakeCtrl.patient.referral_note" id="referralNote" rows="10" class="full-width">
           </textarea>
         </fieldset>
@@ -180,9 +174,8 @@
               </p>
             </div>
             <p class="colx2-right">
-              <label for="anti-delivery-date">Anticipated Delivery Date:</label>
-              <input type="TEXT" name="anti-delivery-date" id="anti-delivery-date" class="datepicker hasDatepick">
-              <img src="images/icons/fugue/calendar-month.png" width="16" height="16">
+              <label>Anticipated Delivery Date:</label>
+              <div data-dd4-datepicker data-ng-model="intakeCtrl.patient.anti_delivery_date"></div>
             </p>
           </div>
         </fieldset>
