--- a/webapps/iis/js/html/vendor.html
+++ b/webapps/iis/js/html/vendor.html
@@ -9,8 +9,7 @@
 			</ul>
 			<div class="tabs-content">
 				<div data-ng-if="vendorCtrl.selectedTab == vendorCtrl.TABS.calendar">
-          <div data-ui-calendar="vendorCtrl.uiConfig.calendar" data-ng-model="vendorCtrl.eventSources"
-               class="span8 calendar">
+          <div data-iis-calendar="{entity: 'vendor', entityId: vendorCtrl.vendor.id}">
           </div>
 				</div>
 				<div data-ng-if="vendorCtrl.selectedTab == vendorCtrl.TABS.general">
@@ -19,10 +18,10 @@
 						<label for="active">Active</label>
 						<label for="name">Name</label>
 						<input type="text" data-ng-model="vendorCtrl.vendor.name" id="name" data-ng-change="vendorCtrl.update('name')" />
-						<label for="address">Address</label>
-						<input type="text" data-ng-model="vendorCtrl.vendor.address" id="address" class="full-width" data-mapauto="vendorCtrl.updateAddress(place)" />
+						<label>Address</label>
+            <div data-dd4-address="vendorCtrl.update('address')" data-ng-model="vendorCtrl.vendor.address" class="full-width"></div>
 						<label for="addr_unit">Unit #</label>
-						<input type="text" data-ng-model="vendorCtrl.vendor.addr_unit" id="addr_unit" size="4" data-on-change="vendorCtrl.update('addr_unit')"/>
+						<input type="text" data-ng-model="vendorCtrl.vendor.address.unit" id="addr_unit" size="4" data-on-change="vendorCtrl.update('address')"/>
 						<label for="phone_number">Phone Number</label>
 						<input type="text" data-ng-model="vendorCtrl.vendor.phone_number" id="phone_number" data-on-change="vendorCtrl.update('phone_number')"/>
 						<label for="fax_number">Fax Number</label>
